--- a/homeloans/homeloan/src/main/webapp/assets/css/style.css
+++ b/homeloans/homeloan/src/main/webapp/assets/css/style.css
@@ -24,7 +24,7 @@
 /*
  Styling
 */
-body {
+td {
   font: 16px/1.5em "Overpass", "Open Sans", Helvetica, sans-serif;
   color: #333;
   font-weight: 300;
@@ -97,3 +97,10 @@ body {
 	
 	display: none;
 }
+
+/* .error {
+	
+	color: red;
+	font-size: 10px;
+	font-family: ;
+} */
