Sprint 1 commit by TL Neha Murthy

--- a/homeloans/homeloan/src/main/webapp/assets/css/main.css
+++ b/homeloans/homeloan/src/main/webapp/assets/css/main.css
@@ -39,7 +39,7 @@ body {
 
     .front {
     border: 2px solid #000000;
-    background-color: rgb(135, 174, 211);
+    background-color: #1abc9c;
     }
 
     
