--- a/homeloans/homeloan/src/main/webapp/assets/css/style.css
+++ b/homeloans/homeloan/src/main/webapp/assets/css/style.css
@@ -98,6 +98,17 @@ body {
 	display: none;
 }
 
+input[type=button], input[type=submit], input[type=file] {
+  background-color: #1abc9c; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+
 /* .error {
 	
 	color: red;
