--- a/homeloans/homeloan/src/main/webapp/includes/AboutUs.html
+++ b/homeloans/homeloan/src/main/webapp/includes/AboutUs.html
@@ -1,20 +1,34 @@
 <html>
     <head>
     	<style>
-    		div {
-    			background-color: #1abc9c;
-    		}
+    		           .nan {
+  background-color: #1abc9c;
+  padding: 2px;
+  text-align: center;
+  font-family:Cambria, Cochin, Georgia, Times, Times New Roman, serif
+}
+.a{
+  margin-right:20px; 
+
+}
     	</style>
     </head>
-        <body >
+        <body>
           
-                    <div>
+  <div class="a"><IMG STYLE="  float:right; " SRC="assets/img/signup.png" width="80px" height="80px"></div>
+            <div class="nan">
+                    <h1 ><u><center>LTI Home Loans</h1></center></u>
+                    <p ><i>Lending for Real Life</p></i>
+                   
+                </div>
+          
+                    <div style="background-color:#1abc9c">
                            <center> <h1>About Us</h1></center>
                           </div><br>
 <p>Home Loans is the largest Mortgage Lender in India, which has helped over 30 lakh families to achieve the dream of owning a home.</p><br>
-<div>
+<div style="background-color:#1abc9c">
 <h3 style="text-align:left;">Our Values</h3>
-</div>
+</div><br>
 <ul>
     <li>Trust</li>
 <li>Transparency</li>
@@ -22,9 +36,9 @@
 <li>Excellence</li>
 
 </ul>
-<div>
+<div style="background-color:#1abc9c">
 <h3 style="text-align:left;">Value to Customers</h3>
-</div>
+</div><br>
 
     <ul>
         <li>Wide Product Range</li>
@@ -36,9 +50,9 @@
     </ul>
 
 
-    <div>
+    <div style="background-color:#1abc9c">
     <h3 style="text-align:left;">Our Presence</h3>
-    </div>
+    </div><br>
    
         <ul>
             <li>24,000+ branches</li>
@@ -46,15 +60,14 @@
         </ul>
 
 
-        <div>
+        <div style="background-color:#1abc9c">
         <h3 style="text-align:left;">Recognitions</h3>
-        </div>
+        </div><br>
 
         <ul>
         <li><b>Winner of the "Best Home Loan Provider at the CNBZ Awaaz Real Estate" Awards 2016</b></li>
         
         </ul>
-
 
         </body>
     
