--- a/homeloans/homeloan/src/main/webapp/includes/faq1.html
+++ b/homeloans/homeloan/src/main/webapp/includes/faq1.html
@@ -3,7 +3,7 @@
 <head>
     <style>
     
-    @import url(https://fonts.googleapis.com/css?family=Lato:300,400,700);
+  @import url(https://fonts.googleapis.com/css?family=Lato:300,400,700);
 
 
 body {
@@ -13,11 +13,11 @@ body {
   line-height:26px;
 }
 
-h1 {
+h2 {
  font-family: "Lato", sans-serif;
 font-weight: 700;
 font-style: normal;
-color: #1abc9c;
+color: #98c23d;
   font-size: 32px;
   
 }
@@ -39,7 +39,7 @@ color: #1abc9c;
 .question {
   color: #fff;
   position: relative;
-  background: #1abc9c;
+  background: #1abc9c;;
   margin: 0;
   padding: 10px 10px 10px 50px;
   display: block;
@@ -98,13 +98,30 @@ color: #1abc9c;
 .questions {
   display: none;
 }
+.nan {
+  background-color: #1abc9c;
+  padding: 2px;
+  text-align: center;
+  font-family:Cambria, Cochin, Georgia, Times, Times New Roman, serif
+}
+.a{
+  margin-right:20px; 
+
+}
     
     </style>
     <body>
 
+<div class="a"><IMG STYLE="  float:right; " SRC="assets/img/signup.png" width="80px" height="80px"></div>
+                <div class="nan">
+                        <h1 ><u><center>LTI Home Loans</h1></center></u>
+                        <p ><i>Lending for Real Life</p></i>
+                       
+                    </div>
+
 
 <div class="content">
-    <h1>FAQs</h1>
+    <h2>FAQs</h2>
       
     <!-- __________________________ SECTIONS ___________________________ --> 
     
